
    - Added delay configurations into multi-touch extension.
    - Drop 32-bit kernel support.
    - Drop OS X 10.8 or prior support.
      KeyRemap4MacBook 9.0.0 requires OS X 10.9+.
    - Drop power button support due to limitations of OS X 10.9.
      You can no longer change the power button on MacBook.
    - Fixed issues:
        - ENV_HOME does not work properly in included xml.
    - Signed with Developer ID.

----------------------------------------------------------------------
= version 8.4.0 =

    - Icons have been refined. (Thanks to Kouji TAMURA.)
    - Introduced @begin and @end in private.xml.
      You can use more than one key at __KeyOverlaidModifier__, __DoublePressModifier__.
    - Supported shell commands execution with KeyCode::VK_OPEN_URL_*.

----------------------------------------------------------------------
= version 8.3.0 =

    - Fixed a bug that "Look up" feature of OS X (tap trackpad with three fingers) does not work properly.
    - Some minor improvements.

----------------------------------------------------------------------
= version 8.2.0 =

    - Fixed a bug that object selection is disabled on Adobe Fireworks.
    - Fixed a bug that "General > Don't remap XXX" does not take effect immediately.
    - Fixed a bug that control-eject shortcut does not work properly on OS X 10.7 and 10.6.

----------------------------------------------------------------------
= version 8.1.0 =

    - Power button remapping has been supported. (Thanks to Peter Kamb who is the author of PowerKey.)
    - Added "Quit KeyRemap4MacBook" into menu bar.
    - Added some styles into status message indicator.
    - Improved compatibility with SmoothMouse.
    - Supported more than three keys at __SimultaneousKeyPresses__.
    - Added KeyCode::VK_OPEN_URL_*.
    - Added KeyCode::VK_PARTIAL_KEYDOWN and KeyCode::VK_PARTIAL_KEYUP.
    - Added Option::POINTINGRELATIVETOSCROLL_TOKEYS.
    - Added __FlipPointingRelative__.
    - Added __FlipScrollWheel__.